# Hartree-Fock

./: HF_H2AlexandreSureda.py  HF_HeH+.py  HF_HeH+AlexandreSureda.py  README.md  Results_H2.txt  Results_HeH+.txt  pyproject.toml
.github/workflows/: ci_install.yml  code-scanning.yml  codeql.yml
examples/: hartree.ipynb
src/hartree_fock/: __init__.py  hartree_fock.py
src/hartree_fock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
